# slyfox-autonome

./: .gitignore  README.md  go.work  go.work.sum  launch_full.sh  load_deps.sh
app/: .Dockerignore  Dockerfile  README.md  build.sh  demo.sh  docker-compose.yaml  hello.html  keyboard.sh  launch.sh  rebuild_run.sh  start_docker.sh
app-go/: .gitignore  README.md  go.mod
app/proxy_holder/: CMakeLists.txt  CMakeLists.txt.bak.2  CMakeLists.txt.bak.3  package.xml
app/proxy_holder/include/: BaseRxTx.hpp  CrsfSerial.hpp  DummyRxTx.hpp  PID.hpp  PID.hpp.bak2  UsbRxTx.hpp  holder.hpp  proxy_holder_node.hpp
app/proxy_holder/launch/: gazebo.py  launch_full.py  rviz_launch.py
app/proxy_holder/rviz/: nav2_default_view.rviz
app/proxy_holder/src/: CrsfSerial.cpp  PID.cpp  arrow.hpp  holder.hpp  main.cpp  proxy_holder_node.cpp  serialib.cpp
app/proxy_holder/src/RxTx/: BaseRxTx.hpp  DummyRxTx.hpp  RxTx.hpp
app/proxy_holder/src/crsf/: CrsfProtocol.hpp  CrsfSerial.cpp  CrsfSerial.hpp
app/proxy_holder/src/pid/: PID.cpp  PID.hpp
app/proxy_holder/urdf/: turtlebot3_waffle.urdf
app/proxy_holder/worlds/: camera.model  camera2.model  waffle.model  world_only.model
demo/src/polygon_base/: package.xml
demo/src/polygon_plugins/: package.xml
imu-tools/: run.sh
multiwii-my-module/: .gitignore  run.sh
realsense/: run.sh  run_rtabmap.sh
research/: filters.ipynb
research/MSP/: checker.ipynb  df_altitude.csv  df_attitude.csv  df_rawIMU.csv  df_rcChannels.csv  df_vtxConfig.csv  msp.py
research/betaflight_18_04_2023/: df_altitude.csv  df_attitude.csv  df_rawIMU.csv  df_rcChannels.csv  df_vtxConfig.csv
robot_localization/: ekf.yaml  run.sh
ros2src/: .gitignore  Dockerfile.ros2  docker-compose.yaml  docker_run.sh
ros2src/app_volume/my_package/src/: run.bash
rossrc/: Dockerfile.roscore  docker-compose.yaml  make.bash  make.sh  manifest.xml
rossrc/scripts/: talker.py
rtabmap/: run.sh
src/: go.mod
src/devices/: accelerometer.go
viso2/: run.sh
